# rozetka_mk

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  MCP4922.xlsx  Pins.txt  Pins_Lebedevskiy.txt  TODO  first_mk Debug.launch  first_mk.ioc  first_mk_Debug_CLion.cfg  Распиновка_Истомин.txt
Tests/: CMakeLists.txt  Tests  Text File  communication_with_MCU.h  decibels_estimator.py  frequency_shifting_analyser.py  general.cpp  general.h  hearing_tester.cpp  hearing_tester.h  lebsasha's_algorithm.h  main.cpp  makefile  protocol_classes.h  r.cbp  r.depend  r.layout  res.csv  res_good.csv  res_in.csv  res_in_debug.csv  res_in_new.csv  res_in_new_2.xlsx  res_new.csv  res_new_2.csv  res_out_good.xlsx  res_out_new.csv  res_ping_good.xlsx  res_ping_new.csv  stat_aggregator.cpp  stat_aggregator.h  test  test.c  test.cpp  test_in  test_in.cpp  test_out.cpp  test_ping.cpp  time_measurer.cpp  time_measurer.h  (+1 more)
Tests/.PVS-Studio/: suppress_base.json
Tests/Logs/: exp_first_good.bin_log  exp_frequency.bin_log  exp_in_end.bin_log  expression_time_in_ops.txt  react_time.csv  react_time_results.csv  stat_react_time.csv  stats.csv
Tests/Logs/1000*sin/: stat_100.csv  stat_110.csv  stat_30.bin_log  stat_50_m.csv  stat_60.csv  stat_70.csv  stat_70_m.csv  stat_90.csv
Tests/Logs/1000_mul_sin/: stat_110_m.csv  stat_50.csv  stat_60_m.csv  stat_90_m.csv
Tests/Logs/sin/: stat_100.csv  stat_100_m.csv  stat_30.csv  stat_30_m.csv  stat_40.csv  stat_40_m.csv  stat_50.csv  stat_50_m.csv  stat_60.csv  stat_60_m.csv  stat_70.csv  stat_70_m.csv  stat_80.csv  (+3 more)
(+26 files in other folders)
